# agent-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/specs/: 2026-04-05-forge-harness-design.md
prompts/: generate_fixes.md  generate_intents.md
prompts/prd/: adversary.md  api_architect.md  contract_enforcer.md  dba.md  design_lead.md  frontend_architect.md  ops_engineer.md  product_manager.md  rust_engineer.md  security_auditor.md  simplifier.md
src/: claude_client.rs  main.rs  orchestrator_client.rs  prd_runner.rs  runner.rs  types.rs
